link jumping fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 /* font-family: 'Raleway', sans-serif; */
+/* font-weights 400 and 700 */
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
 /* font-family: 'Open Sans', sans-serif; */
+/* font-weights 400 and 700 */
 
 /* base styles */
 
@@ -58,6 +60,14 @@ ul {
   justify-content: space-between;
   font-family: "Raleway", sans-serif;
   font-size: 17px;
+}
+
+li:nth-of-type(1) {
+  width: 74px;
+}
+
+li:nth-of-type(3) {
+  width: 62px;
 }
 
 nav a {
@@ -421,10 +431,12 @@ form label:active {
 
 #footer div:nth-of-type(3) p {
   padding-bottom: 18px;
+  min-width: 70px;
 }
 
 #footer div:nth-of-type(4) p {
   padding-bottom: 18px;
+  min-width: 75px;
 }
 
 #footer div:nth-of-type(5) i {
